@@ -221,3 +221,11 @@ CONFIG_DEFINE (IMAGE_DUMP)
 CHECK_FUNCTION_EXISTS (mmap HAVE_MMAP)
 
 CONFIG_DEFINE (HAVE_MMAP)
+
+# OLPC
+
+IF (NOT without-SUGAR)
+  SET (SUGAR 1)
+ENDIF ()
+
+CONFIG_DEFINE (SUGAR)
